@@ -4,11 +4,11 @@ import org.jboss.netty.channel.{ChannelHandlerContext, MessageEvent, SimpleChann
 import org.jboss.netty.handler.codec.http.HttpRequest
 import org.jboss.netty.handler.ssl.SslHandler
 
-
 /**
  * Extract the cipher from the SslHandler and set it as a header on the HTTP
  * request befor sending it upstream.
  */
+private[httpx]
 class AnnotateCipher(headerName: String) extends SimpleChannelHandler {
   override def messageReceived(ctx: ChannelHandlerContext, e: MessageEvent) {
     (e.getMessage, ctx.getPipeline.get(classOf[SslHandler])) match {
